# swotzyPy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
swotzypy/: __init__.py  exceptions.py
swotzypy/api/: endpoints.py  enums.py  models.py
swotzypy/auth/: auth.py
swotzypy/core/: client.py  config.py  http.py
